# glowing-waffle

./: CI_SETUP.md  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  release.yml  rust.yml
.obsidian/: workspace.json
benches/: render_benchmark.rs
examples/: simple_waffle.rs
src/: animation.rs  benchmark.rs  lib.rs  main.rs  renderer.rs  terminal.rs  waffle.rs
tests/: terminal_tests.rs
